# crc-32c

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: algorithm.rs  digest.rs  lib.rs  util.rs
