[package]
name = "crc-32c"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
crc = "3.0.1"
crc32c = "0.6.4"
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "benchmark"
harness = false
